# passcli

./: Cargo.toml  README.md  makefile
.rpm/: passcli.spec
src/: main.rs
src/lib/: add_password.rs  create_file.rs  generate_password.rs  mod.rs  remove_password.rs
src/lib/cmd/: create.rs  entry.rs  generate.rs  list.rs  mod.rs  remove.rs
src/lib/core/: create_file.rs  entry.rs  mod.rs  remove_password.rs  validators.rs  vault.rs
